unpackaged/objects/Complaints__c.object
<CustomObject>
    <fields>
        <fullName>Responsible_Party_State__c</fullName>
        <label>Responsible Party State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                    <default>true</default>
                    <label>California</label>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Party_Street__c</fullName>
        <label>Responsible Party Street</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Zip_Code__c</fullName>
        <label>Responsible Party Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive_Location__c</fullName>
        <label>Sensitive Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residences/Apartments</fullName>
                </value>
                <value>
                    <fullName>School/Daycare/Churches</fullName>
                </value>
                <value>
                    <fullName>Hospitals/Eldercare Home</fullName>
                </value>
                <value>
                    <fullName>Ocean/Lakes/Stream/Riverbed/Wetlands</fullName>
                </value>
                <value>
                    <fullName>Storm Drain</fullName>
                </value>
                <value>
                    <fullName>Public Parks/State and National Parks</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solid_Waste__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this check box if the complaint is a solid waste issue</inlineHelpText>
        <label>Solid Waste</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a spill complaint?</inlineHelpText>
        <label>Spill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Date__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Staff Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Staff</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <inlineHelpText>Under Review: Initial investigation is in progress or trying to Refer
Transferred:  Complaint has been assigned internally
Referred:  Complaint has been assigned and confirmed to an external partner
Closed/Actions Taken:  Closed for Cal EPA</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Date__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Supervisor Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>For EnviroStor integration</description>
        <label>Supervisor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Contact_Email__c</fullName>
        <label>Temp Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toxic_Substances__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this check box if the complaint is a toxic substances related issue</inlineHelpText>
        <label>Toxic Substances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toxics_Other_Location__c</fullName>
        <description>Enter information for Toxics complaint if sensitive location picklist is not adequate</description>
        <label>Toxics Other Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribal_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the complaint have to do with Tribal issues?</inlineHelpText>
        <label>Tribal Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unknown_Date_of_Occurrence__c</fullName>
        <label>Unknown Date of Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In the Last 7 Days</fullName>
                </value>
                <value>
                    <fullName>In the Last 30 Days</fullName>
                </value>
                <value>
                    <fullName>A Long Time Ago</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Exact Date</fullName>
                    <default>true</default>
                    <label>Exact Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_or_Stationary__c</fullName>
        <inlineHelpText>Is this air complaint regarding a fixed structure (building, house etc.) or a Vehicle (trucks, cars, transportation vehicles)?</inlineHelpText>
        <label>Vehicle or Stationary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Stationary Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waste_Tires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waste Tires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Cannabis_Marijuana__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pollution of waterways and land due to trash, chemicals, and pesticides associated with cannabis cultivation, or use of water for irrigation of cannabis plants or grading, excavation, road construction, and site development.</inlineHelpText>
        <label>Water - Cannabis/Marijuana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Problems  or pollution in a stream, river, lake, wetlands, bay, groundwater basin, or the ocean resulting from discharges of polluted water or stormwater, or from other activities such as construction, grading, and excavations.</inlineHelpText>
        <label>Water Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Right_Number__c</fullName>
        <label>Water Rights Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Water_Rights_Description__c</fullName>
        <label>Water Rights Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Water_Rights_Owner__c</fullName>
        <label>Water Rights Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complainant</fullName>
                </value>
                <value>
                    <fullName>Alleged Responsible Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Water diversions from a stream, river, or lake, or extractions of groundwater that may be unauthorized or illegal, may be impacting your water rights, may be wasteful and unreasonable use of water, or may be impacting fish, wildlife or habitats.</inlineHelpText>
        <label>Water Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this check box if the complaint is a water related issue</inlineHelpText>
        <label>Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watershed__c</fullName>
        <label>Watershed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Whistle_Blower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whistle Blower?</label>
        <type>Checkbox</type>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>Agency_Complaints</fullName>
        <filterScope>Mine</filterScope>
        <label>Agency</label>
    </listViews>
    <listViews>
        <fullName>Agency_ComplaintsEV</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>Refinery__c</columns>
        <columns>Air__c</columns>
        <columns>Water__c</columns>
        <columns>Pesticides__c</columns>
        <columns>Toxic_Substances__c</columns>
        <columns>Solid_Waste__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Tribal_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Agency Executive View</label>
    </listViews>
    <listViews>
        <fullName>Air_Resources_Board</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>Air_District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Air__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Air Resources Board</label>
    </listViews>
    <listViews>
        <fullName>All_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>Tribal_Complaint__c</columns>
        <columns>Air__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Complaints</label>
    </listViews>
    <listViews>
        <fullName>CalRecycle</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>LEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Solid_Waste__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>CalRecycle</label>
    </listViews>
    <listViews>
        <fullName>Drinking_Water</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>Complaint_Location_County__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Drinking Water</label>
    </listViews>
    <listViews>
        <fullName>Legacy_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Original_Complaint_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Air__c</columns>
        <columns>Pesticides__c</columns>
        <columns>Solid_Waste__c</columns>
        <columns>Toxic_Substances__c</columns>
        <columns>Water__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Original_Complaint_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Legacy Complaints</label>
    </listViews>
    <listViews>
        <fullName>My_Complaints</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Complainant__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>EJ_Flag__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Complaints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Air__c</columns>
        <columns>Pesticides__c</columns>
        <columns>Solid_Waste__c</columns>
        <columns>Water__c</columns>
        <columns>Toxic_Substances__c</columns>
        <columns>Date_and_Time_of_Occurrence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_State_Board</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Water_Board__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open State Board</label>
    </listViews>
    <listViews>
        <fullName>Pesticide_Regulation</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <columns>Complaint_Location_City__c</columns>
        <columns>Agricultural_Commissioner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pesticides__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Pesticide Regulation</label>
    </listViews>
    <listViews>
        <fullName>Region_1</fullName>
        <booleanFilter>1 AND 2 AND ((3 AND 4) OR (5 AND 6)) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Water_Board__c</field>
            <operation>equals</operation>
            <value>Region 1</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Region 1</label>
    </listViews>
    <listViews>
        <fullName>Region_2</fullName>
        <booleanFilter>1 AND 2 AND ((3 AND 4) OR (5 AND 6)) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Water_Board__c</field>
            <operation>equals</operation>
            <value>Region 2</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Region 2</label>
    </listViews>
    <listViews>
        <fullName>Region_3</fullName>
        <booleanFilter>1 AND 2 AND ((3 AND 4) OR (5 AND 6)) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Water_Board__c</field>
            <operation>equals</operation>
            <value>Region 3</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Region 3</label>
    </listViews>
    <listViews>
        <fullName>Region_4</fullName>
        <booleanFilter>1 AND 2 AND ((3 AND 4) OR (5 AND 6)) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Actual_Receive_Date__c</columns>
        <columns>EJ_Complaint__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Water_Board__c</field>
            <operation>equals</operation>
            <value>Region 4</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Drinking_Water__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Water_Rights__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Complaints__c.Parent</value>
        </filters>
        <label>Region 4</label>
    </listViews>
    <nameField>
        <displayFormat>COMP-{00000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <recordTypes>
        <fullName>Air</fullName>
        <active>true</active>
        <description>Air Complaint Record Type.</description>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <description>Parent complaint Record Type..</description>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pesticides</fullName>
        <active>true</active>
        <description>Pesticide complaint Record Type.</description>
        <label>Pesticides</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solid_Waste</fullName>
        <active>true</active>
        <description>Solid waste complaint Record Type.</description>
        <label>Solid Waste</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toxic_Substance</fullName>
        <active>true</active>
        <description>Toxic substance complaint Record Type.</description>
        <label>Toxic Substance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water</fullName>
        <active>true</active>
        <description>Water Complaint Record Type.</description>
        <label>Water</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_PO_Boxes_for_Complaint_Location</fullName>
        <active>true</active>
        <description>No PO Boxes for Complaint Location.  Disableable</description>
        <errorConditionFormula>AND(NOT($Setup.Disable_All_Validation_Rules__c.Value__c), NOT(ISPICKVAL(Complaint_Source__c, &quot;Web&quot;)),
OR(CONTAINS(Complaint_Location_Address__c, &quot;PO Box&quot;),
CONTAINS(Complaint_Location_Address__c, &quot;POB&quot;),
CONTAINS(Complaint_Location_Address__c, &quot;P.O. Box&quot;)))</errorConditionFormula>
        <errorMessage>Please do not enter PO Boxes for the Complaint Location Address.  This must be a physical address.</errorMessage>
    </validationRules>
</CustomObject>